--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Gui Sanches de Oliveira"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://gui-cogsci.github.io
+url                      : https://gui.embody.group/
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
