--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Gui Sanches de Oliveira"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Gui Sanches de Oliveira"
 description              : &description "personal description"
 url                      : https://gui.embody.group/
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
