--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "https://gui.embody.group/images/gui-headshot.jpg"
   bio              : "philosophy + embodied cognitive science + ecological psychology"
   location         : 
-  employer         : "Technische Universität Berlin"
+  employer         : "University of Murcia"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=cA03b8QAAAAJ&hl=en"
   email            : "gui.cogsci@gmail.com"
