--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,10 +9,10 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  #- title: "Teaching"
+  #  url: /teaching/    
           
-  - title: "EMBODY Research Group"
+  - title: "EMBODY Research Group (2020-2025)"
     url: http://www.embody.group
     
   
